xsoft_infra/files/iptables.rules.txt
*filter

# DNS
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT

# Kerberos
-A INPUT -p tcp --dport 88 -j ACCEPT
-A INPUT -p udp --dport 88 -j ACCEPT

# LDAP
-A INPUT -p tcp --dport 389 -j ACCEPT
-A INPUT -p udp --dport 389 -j ACCEPT

# SMB / NetBIOS
-A INPUT -p tcp --dport 139 -j ACCEPT
-A INPUT -p tcp --dport 445 -j ACCEPT

# RPC services
-A INPUT -p tcp --dport 135 -j ACCEPT

# Разрешаем трафик на локальном интерфейсе
-A INPUT -i lo -j ACCEPT

# Разрешаем трафик на порты для ssh и http
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT

# Разрешаем ICMP
-A INPUT -p icmp --icmp-type 8 -j ACCEPT

# Разрешаем установленные соединения
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Блокируем все остальные входящие соединения
-A INPUT -j DROP

COMMIT
